2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Use the
	original assembly name as base name for satellite assemblies.

	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	Don't try to read an existing db when creating a new temporary one.

2008-11-04  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Projects.Dom/IType.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs: fixed 'Bug 441061 - Completion
	broken for arrays'.

2008-11-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	Properly read the clr version. It must be assigned to the project in
	addition to assigning to the configurations.

2008-11-03  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Projects.Dom/DomCecilType.cs: fixed 'Bug 440366 - Cannot
	override base methods'.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs: Fixed and simplified
	RemoveAllInDirectory.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Delete
	satellite assembly directories when cleaning. Fixes bug #400420.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Use the
	file service to delete files so that events are fired and the
	solution pad can be updated. 

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Added helper methods and properties for accessing to the db file
	name.

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Don't pre-load
	the mscrolib database. It is not necessary anymore.

	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	When generating a database for an assembly, generate first in a temp