@@ -1,5 +1,12 @@
 2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* MonoDevelop.Projects.Formats.MSBuild/SlnData.cs:
+	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs:
+	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs: Properly
+	save the product number when converting between msbuild formats.
+
+2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Use the
 	original assembly name as base name for satellite assemblies.
 
